--- a/doc/latex/CrossValidation_8h.tex
+++ b/doc/latex/CrossValidation_8h.tex
@@ -17,5 +17,11 @@
 
 \doxysubsection{Detailed Description}
 \begin{DoxyAuthor}{Author}
-\+: ***REMOVED*** @\+Date\+: July 2020 @\+Version\+: 0.\+1 @\+File\+: Definition and implementation of the function cross\+Validate 
+***REMOVED*** 
 \end{DoxyAuthor}
+\begin{DoxyDate}{Date}
+July 2020 
+\end{DoxyDate}
+\begin{DoxyVersion}{Version}
+0.\+1 Definition and implementation of the function cross\+Validate 
+\end{DoxyVersion}
