--- a/doc/latex/Instance_8h.tex
+++ b/doc/latex/Instance_8h.tex
@@ -21,5 +21,11 @@ class \mbox{\hyperlink{classinput_1_1LabeledInstance}{input\+::\+Labeled\+Instan
 
 \doxysubsection{Detailed Description}
 \begin{DoxyAuthor}{Author}
-\+: ***REMOVED*** @\+Date\+: June 2020 @\+Version\+: 0.\+1 @\+File\+: Definition of the Instance class and its children 
+***REMOVED*** 
 \end{DoxyAuthor}
+\begin{DoxyDate}{Date}
+June 2020 
+\end{DoxyDate}
+\begin{DoxyVersion}{Version}
+0.\+1 
+\end{DoxyVersion}
