--- a/doc/latex/KNearestNeighbors_8h.tex
+++ b/doc/latex/KNearestNeighbors_8h.tex
@@ -25,5 +25,11 @@ class \mbox{\hyperlink{classknearest_1_1KNearestNeighbors}{knearest\+::\+K\+Near
 
 \doxysubsection{Detailed Description}
 \begin{DoxyAuthor}{Author}
-\+: ***REMOVED*** @\+Date\+: July 2020 @\+Version\+: 0.\+1 @\+File\+: Definition and implementation of the K Nearest Neighbors learner, concrete implementation of Learner 
+***REMOVED*** 
 \end{DoxyAuthor}
+\begin{DoxyDate}{Date}
+July 2020 
+\end{DoxyDate}
+\begin{DoxyVersion}{Version}
+0.\+1 
+\end{DoxyVersion}
