--- a/doc/latex/Learner_8h.tex
+++ b/doc/latex/Learner_8h.tex
@@ -20,5 +20,11 @@ class \mbox{\hyperlink{classlearner_1_1Learner}{learner\+::\+Learner$<$ T, Q, P 
 
 \doxysubsection{Detailed Description}
 \begin{DoxyAuthor}{Author}
-\+: ***REMOVED*** @\+Date\+: July 2020 @\+Version\+: 0.\+1 @\+File\+: Definition and implementation of the interface Learner 
+***REMOVED*** 
 \end{DoxyAuthor}
+\begin{DoxyDate}{Date}
+July 2020 
+\end{DoxyDate}
+\begin{DoxyVersion}{Version}
+0.\+1 
+\end{DoxyVersion}
