--- a/doc/latex/LossFunction_8h.tex
+++ b/doc/latex/LossFunction_8h.tex
@@ -21,5 +21,11 @@ class \mbox{\hyperlink{classloss_1_1SquaredLoss}{loss\+::\+Squared\+Loss$<$ T, Q
 
 \doxysubsection{Detailed Description}
 \begin{DoxyAuthor}{Author}
-\+: ***REMOVED*** @\+Date\+: July 2020 @\+Version\+: 0.\+1 @\+File\+: Definition and implementation of the Loss\+Function interface and concrete implementations 
+***REMOVED*** 
 \end{DoxyAuthor}
+\begin{DoxyDate}{Date}
+July 2020 
+\end{DoxyDate}
+\begin{DoxyVersion}{Version}
+0.\+1 
+\end{DoxyVersion}
