--- a/doc/latex/Parameter_8h.tex
+++ b/doc/latex/Parameter_8h.tex
@@ -22,5 +22,11 @@ struct \mbox{\hyperlink{structstd_1_1hash_3_01Parameter_3_01T_01_4_01_4}{std\+::
 
 \doxysubsection{Detailed Description}
 \begin{DoxyAuthor}{Author}
-\+: ***REMOVED*** @\+Date\+: July 2020 @\+Version\+: 0.\+1 @\+File\+: Definition and implementation of the Parameter class and related objects 
+***REMOVED*** 
 \end{DoxyAuthor}
+\begin{DoxyDate}{Date}
+July 2020 
+\end{DoxyDate}
+\begin{DoxyVersion}{Version}
+0.\+1 
+\end{DoxyVersion}
