--- a/doc/latex/Sample_8h.tex
+++ b/doc/latex/Sample_8h.tex
@@ -38,5 +38,11 @@ struct \mbox{\hyperlink{structsample_1_1ValidationSample}{sample\+::\+Validation
 
 \doxysubsection{Detailed Description}
 \begin{DoxyAuthor}{Author}
-\+: ***REMOVED*** @\+Date\+: July 2020 @\+Version\+: 0.\+1 @\+File\+: Definition and implementation of Sample, Validation\+Sample, Sliced\+Sample and Sliced\+Setted\+Sample; it also contains the implementation of the function sample\+From\+Csv. 
+***REMOVED*** 
 \end{DoxyAuthor}
+\begin{DoxyDate}{Date}
+July 2020 
+\end{DoxyDate}
+\begin{DoxyVersion}{Version}
+0.\+1 
+\end{DoxyVersion}
