--- a/doc/latex/files.tex
+++ b/doc/latex/files.tex
@@ -1,6 +1,6 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{/home/edoardo/cl/supl/include/{\bfseries supl.\+h} }{\pageref{supl_8h}}{}
+\item\contentsline{section}{/home/edoardo/cl/supl/include/\mbox{\hyperlink{supl_8h}{supl.\+h}} }{\pageref{supl_8h}}{}
 \item\contentsline{section}{/home/edoardo/cl/supl/include/\+Cross-\/validation/\mbox{\hyperlink{CrossValidation_8h}{Cross\+Validation.\+h}} }{\pageref{CrossValidation_8h}}{}
 \item\contentsline{section}{/home/edoardo/cl/supl/include/\+Input/\mbox{\hyperlink{Instance_8h}{Instance.\+h}} }{\pageref{Instance_8h}}{}
 \item\contentsline{section}{/home/edoardo/cl/supl/include/\+Input/\mbox{\hyperlink{Sample_8h}{Sample.\+h}} }{\pageref{Sample_8h}}{}
